# ScriptRating

./: .env.example  .gitignore  BACKEND_CHAT_IMPLEMENTATION_FINAL_REPORT.md  BROWSER_CONSOLE_ERROR_ANALYSIS_REPORT.md  CATEGORY_NAMING_FIX_REPORT.md  CHAT_BACKEND_TESTING_REPORT.md  CHAT_SYSTEM_SIMPLIFICATION_REPORT.md  CORS_FIX_IMPLEMENTATION_REPORT.md  DOCX_CONTENT_TYPE_FIX_REPORT.md  DOCX_JAVASCRIPT_ERROR_INVESTIGATION.md  DOCX_RUNTIME_ERROR_DEBUG_REPORT.md  Dockerfile  EMBEDDING_SERVICE_STABLE_FIX_REPORT.md  FINAL_BROWSER_CONSOLE_DEBUG_REPORT.md  FINAL_EMBEDDING_SERVICE_STABLE_FIX_SUMMARY.md  FLUTTER_DROPDOWN_ASSERTION_ERROR_FIX_REPORT.md  LLM_Analysis_Summary.md  LLM_Full_Architecture_Documentation.md  Makefile  OPENROUTER_MODEL_SELECTION_FIX_RE  PROJECT_CLEANUP_FINAL_REPORT.md<  RAG_IMPLEMENTATION_SUMMARY.md  README.md  REAL_TIME_CHAT_INTERFACE_FINAL_DOCUMENTATION.md  REAL_TIME_CHAT_INTERFACE_TESTING_REPORT.md  browser_console_debug.py  category_integration_test.py  category_naming_test.py  chat_backend_test.py  check_rag_status.py  comprehensive_docx_debug.py  comprehensive_e2e_test.py  comprehensive_embedding_test.py  comprehensive_rag_test.py  comprehensive_rag_testing_plan.md  debug_imports.py  docker-compose.yml  edge_case_analysis.py  embedding_research.py  embedding_service_fix_report.md  (+66 more)
config/: qdrant.yaml  settings.py  settings_backup.py
docs/: RAG_IMPLEMENTATION_GUIDE.md  README.md  architecture.md  llm_analysis_and_implementation_plan.md  navigation.md  openrouter_integration_test_report.md  rag_improvement_final_specification.md  real_time_chat_implementation_plan.md  semantic_chunking_architecture.md  semantic_integration_plan.md  technical_proposal_semantic_chunking.md  test_documentation.md
flutter/: .env.example  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  pubspec.yaml
scripts/: download_models.py  migrate_to_vector_search.py  test_migration_pipeline.py
tests/: __init__.py  chat_backend_test.py  test_analysis_workflow.py  test_health.py
(+361 files in other folders)
